2007-04-06  Jan Hubicka  <jh@suse.cz>

	* cgraphunit.c (decide_is_function_needed): Do not keep always_inline
	functions.

2007-04-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (output_387_reg_move): Handle memory operand[0].
	* config/i386/i386.md (*movsf_1, *movdf_nointeger,
	*movdf_integer_rex64, *movdf_integer, *movxf_nointeger,
	*movxf_integer): Use output_387_reg_move() for x87 reg->mem
	alternative.
	(*extendsfdf2_mixed, *extendsfdf2_i387, *extendsfxf2_i387,
	*extenddfxf2_i387, *truncdfsf_fast_mixed): Ditto.

2007-04-05  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (print_operand) [+]: Remove.
	(alpha_end_function): Print nop if call at end of function.
	* config/alpha/alpha.h (PRINT_OPERAND_PUNCT_VALID_P): Remove +.
	* config/alpha/alpha.md (UNSPEC_LDGP1): New.
	(call_osf_1_er_noreturn, call_value_osf_1_er_noreturn): New.
	(call_osf_2_er_nogp, call_value_osf_2_er_nogp): New.
	(call_osf_2_er, call_value_osf_2_er): Merge the ldgp highpart into
	the call pattern. Update peepholes to match.

2007-04-05  Janis Johnson  <janis187@us.ibm.com>

	* doc/extend.texi (Other Builtins): Add decimal float variants
	of signbit.
	* builtins.def: Ditto.
	* builtins.c (expand_builtin): Ditto.

2007-04-05  Uros Bizjak  <ubizjak@gmail.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	PR target/31478
	* config/i386/sse.md (sse2_umulv2siv2di3): Use V4SImode instead
	of V8HImode when calling ix86_binary_operator_ok.
	(sse2_pmaddwd): Call ix86_binary_operator_ok.
	(sdot_prodv8hi): Operands 1 and 2 must be register.

2007-04-05  Alexandre Oliva  <aoliva@redhat.com>

	* tree-sra.c (try_instantiate_multiple_fields): Needlessly
	initialize align to silence bogus warning.

2007-04-05  Alexandre Oliva  <aoliva@redhat.com>

	PR middle-end/22156
	* tree-sra.c (struct sra_elt): Add in_bitfld_block.  Remove
	all_no_warning.
	(struct sra_walk_fns): Remove use_all parameter from use.
	(sra_hash_tree): Handle BIT_FIELD_REFs.
	(sra_elt_hash): Don't hash bitfld blocks.